Vanilla code style