@@ -30,75 +30,16 @@ import java.util.List;
 import java.util.OptionalInt;
 
 public class TuroConfiguredFeatures {
-    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_APRICOT_BUSH =
-            FeatureUtils.register("patch_apricot_bush", Feature.RANDOM_PATCH,
-                    FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(
-                            BlockStateProvider.simple(ApricotBush.APRICOT_BUSH.get()
-                                    .defaultBlockState()
-                                    .setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
-
-
-    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_BLBERRY_BUSH =
-            FeatureUtils.register("patch_blueberry_bush", Feature.RANDOM_PATCH,
-                    FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(
-                            BlockStateProvider.simple(BlueBerryBush.BLBERRY_BUSH.get()
-                                    .defaultBlockState()
-                                    .setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
-
-
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> CHERRY_TREE =
-            FeatureUtils.register("cherry", Feature.TREE, new TreeConfigurationBuilder(
-                    BlockStateProvider.simple(CherryTree.CHERRY_LOG.get()),
-                    new FancyTrunkPlacer(3, 11, 0),
-                    BlockStateProvider.simple(CherryTree.CHERRY_LEAVES.get()),
-                    new FancyFoliagePlacer(ConstantInt.of(2), ConstantInt.of(4), 4),
-                    new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4)))
-                    .ignoreVines().build());
-
-    public static final Holder<PlacedFeature> CHERRY_CHECKED = PlacementUtils.register("cherry_checked", CHERRY_TREE,
-            PlacementUtils.filteredByBlockSurvival(CherryTree.CHERRY_SAPLING.get()));
-    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> CHERRY_SPAWN =
-            FeatureUtils.register("cherry_spawn", Feature.RANDOM_SELECTOR,
-                            new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(CHERRY_CHECKED,
-                                    0.5F)), CHERRY_CHECKED));
-
-    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_LEMON_BUSH =
-            FeatureUtils.register("patch_lemon_bush", Feature.RANDOM_PATCH,
-                    FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(
-                            BlockStateProvider.simple(LemonBush.LEMON_BUSH.get()
-                                    .defaultBlockState()
-                                    .setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
-
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> ORANGE_TREE =
-            FeatureUtils.register("orange", Feature.TREE, new TreeConfigurationBuilder(
-                    BlockStateProvider.simple(OrangeTree.ORANGE_LOG.get()),
-                    new FancyTrunkPlacer(3, 11, 0),
-                    BlockStateProvider.simple(OrangeTree.ORANGE_LEAVES.get()),
-                    new FancyFoliagePlacer(ConstantInt.of(2), ConstantInt.of(4), 4),
-                    new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))).build());
-
-    public static final Holder<PlacedFeature> ORANGE_CHECKED = PlacementUtils.register("orange_checked", ORANGE_TREE,
-            PlacementUtils.filteredByBlockSurvival(OrangeTree.ORANGE_SAPLING.get()));
-    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> ORANGE_SPAWN =
-            FeatureUtils.register("orange_spawn", Feature.RANDOM_SELECTOR,
-                    new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(ORANGE_CHECKED,
-                            0.5F)), ORANGE_CHECKED));
-
-    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> PALM_TREE =
-            FeatureUtils.register("palm", Feature.TREE, new TreeConfigurationBuilder(
-                    BlockStateProvider.simple(PalmTree.PALM_LOG.get()),
-                    new ForkingTrunkPlacer(5, 2, 2),
-                    BlockStateProvider.simple(PalmTree.PALM_LEAVES.get()),
-                    new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)),
-                    new TwoLayersFeatureSize(1, 0, 2))
-                    .dirt(BlockStateProvider.simple(Blocks.SAND)).ignoreVines()
-                    .decorators(ImmutableList.of(new CoconutDecorator(0.2F),
-                            new BananaDecorator(0.2F))).build());
-
-    public static final Holder<PlacedFeature> PALM_CHECKED = PlacementUtils.register("palm_checked", PALM_TREE,
-            PlacementUtils.filteredByBlockSurvival(PalmTree.PALM_SAPLING.get()));
-    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> PALM_SPAWN =
-            FeatureUtils.register("palm_spawn", Feature.RANDOM_SELECTOR,
-                    new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(PALM_CHECKED,
-                            0.5F)), PALM_CHECKED));
+    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> CHERRY_TREE = FeatureUtils.register("cherry", Feature.TREE, new TreeConfigurationBuilder(BlockStateProvider.simple(CherryTree.CHERRY_LOG.get()), new FancyTrunkPlacer(3, 11, 0), BlockStateProvider.simple(CherryTree.CHERRY_LEAVES.get()), new FancyFoliagePlacer(ConstantInt.of(2), ConstantInt.of(4), 4), new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))).ignoreVines().build());
+    public static final Holder<PlacedFeature> CHERRY_CHECKED = PlacementUtils.register("cherry_checked", CHERRY_TREE, PlacementUtils.filteredByBlockSurvival(CherryTree.CHERRY_SAPLING.get()));
+    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> CHERRY_SPAWN = FeatureUtils.register("cherry_spawn", Feature.RANDOM_SELECTOR, new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(CHERRY_CHECKED, 0.5F)), CHERRY_CHECKED));
+    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> ORANGE_TREE = FeatureUtils.register("orange", Feature.TREE, new TreeConfigurationBuilder(BlockStateProvider.simple(OrangeTree.ORANGE_LOG.get()), new FancyTrunkPlacer(3, 11, 0), BlockStateProvider.simple(OrangeTree.ORANGE_LEAVES.get()), new FancyFoliagePlacer(ConstantInt.of(2), ConstantInt.of(4), 4), new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))).build());
+    public static final Holder<PlacedFeature> ORANGE_CHECKED = PlacementUtils.register("orange_checked", ORANGE_TREE, PlacementUtils.filteredByBlockSurvival(OrangeTree.ORANGE_SAPLING.get()));
+    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> ORANGE_SPAWN = FeatureUtils.register("orange_spawn", Feature.RANDOM_SELECTOR, new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(ORANGE_CHECKED, 0.5F)), ORANGE_CHECKED));
+    public static final Holder<ConfiguredFeature<TreeConfiguration, ?>> PALM_TREE = FeatureUtils.register("palm", Feature.TREE, new TreeConfigurationBuilder(BlockStateProvider.simple(PalmTree.PALM_LOG.get()), new ForkingTrunkPlacer(5, 2, 2), BlockStateProvider.simple(PalmTree.PALM_LEAVES.get()), new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)), new TwoLayersFeatureSize(1, 0, 2)).dirt(BlockStateProvider.simple(Blocks.SAND)).ignoreVines().decorators(ImmutableList.of(new CoconutDecorator(0.2F), new BananaDecorator(0.2F))).build());
+    public static final Holder<PlacedFeature> PALM_CHECKED = PlacementUtils.register("palm_checked", PALM_TREE, PlacementUtils.filteredByBlockSurvival(PalmTree.PALM_SAPLING.get()));
+    public static final Holder<ConfiguredFeature<RandomFeatureConfiguration, ?>> PALM_SPAWN = FeatureUtils.register("palm_spawn", Feature.RANDOM_SELECTOR, new RandomFeatureConfiguration(List.of(new WeightedPlacedFeature(PALM_CHECKED, 0.5F)), PALM_CHECKED));
+    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_APRICOT_BUSH = FeatureUtils.register("patch_apricot_bush", Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(ApricotBush.APRICOT_BUSH.get().defaultBlockState().setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
+    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_BLBERRY_BUSH = FeatureUtils.register("patch_blueberry_bush", Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(BlueBerryBush.BLBERRY_BUSH.get().defaultBlockState().setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
+    public static final Holder<ConfiguredFeature<RandomPatchConfiguration, ?>> PATCH_LEMON_BUSH = FeatureUtils.register("patch_lemon_bush", Feature.RANDOM_PATCH, FeatureUtils.simplePatchConfiguration(Feature.SIMPLE_BLOCK, new SimpleBlockConfiguration(BlockStateProvider.simple(LemonBush.LEMON_BUSH.get().defaultBlockState().setValue(SweetBerryBushBlock.AGE, 3))), List.of(Blocks.GRASS_BLOCK)));
 }
